--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
-inventory=/root/inventory.txt
+inventory=location_of_inventory_file
 command_warnings=false
 remote_user = ec2-user
 host_key_checking = false
-private_key_file = /root/arpit_aws.pem
+private_key_file = /location_of_private_key
 ask_pass = false
 
 [privilege_escalation]
